[package]
name = "unlockd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
color-eyre = { version = "0.6.2", default-features = false }
duct = "0.13.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
zbus = { version = "3.11.1", features = ["tokio"] }
