[package]
name = "unlockd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Small daemon that listens to the Freedesktop session lock hint and runs a command on unlock"
authors = ["Joseph Cooper <cooper.joseph@gmail.com>"]
repository = "https://github.com/OmriCat/unlockd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
color-eyre = { version = "0.6.2", default-features = false }
ctrlc = { version = "3.2.5", features = ["termination"] }
duct = "0.13.6"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
zbus = { version = "3.11.1", features = ["tokio"] }
